--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,15 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+
+#########
+##Symfony 
+#######
+
+/Symfony/web/bundles/
+/Symfony/app/bootstrap*
+/Symfony/app/cache/*
+/Symfony/app/logs/*
+/Symfony/vendor/
+/Symfony/app/config/parameters.yml
